# akonadiclient

src/: CMakeLists.txt  commandfactory.cpp  copycommand.cpp  renamecommand.cpp  renamecommand.h
src/tests/: CMakeLists.txt  abstractcommandtest.cpp  abstractcommandtest.h  copycommandtest.cpp  copycommandtest.h
